# gin_tonic

./: AGENTS.md  Cargo.toml  build.rs  docker-compose.yml  example.env
migrations/: 20251212210617_create_users.sql
proto/: service.proto
src/: lib.rs  main.rs
src/entities/: users.rs
src/repositories/: mod.rs  user_repository.rs  user_repository_trait.rs
src/servers/: mod.rs  user_server.rs
src/usecases/: mod.rs  user_usecase.rs  user_usecase_trait.rs
