[package]
name = "gin_tonik"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.14.1"
sqlx = { version = "0.8.6", features = ["postgres", "macros", "runtime-tokio"] }
tokio = { version = "1.48.0", features = ["full"] }
tonic = "0.14.2"
tonic-prost = "0.14.2"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"

[build-dependencies]
tonic-prost-build = "0.14.2"
